remove guava dependency
Signed-off-by: Jing Zhang <jngz@amazon.com>